# 220_graphics

./: CMakeLists.txt  Dockerfile  main.cpp
ascii/: Ascii.cpp  Ascii.h  CMakeLists.txt
genetic_algorithm/: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Population.cpp  Population.h
src/: CMakeLists.txt  FindImageMagick.cmake  FindPackageHandleStandardArgs.cmake  main.cpp
src/ascii/: Ascii.cpp  Ascii.h  CMakeLists.txt
src/genetic_algorithm/: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Population.cpp  Population.h
